--- a/recipes/misto.html
+++ b/recipes/misto.html
@@ -8,7 +8,8 @@
     <body>
         <h1>Misto</h1>
         <img src="images/misto.jpg" alt="Misto">
-        <h2>Misto</h2>
+        <h2>What is a misto?</h2>
+        <p>A misto is a Brazilian cheese and turkey sandwich.</p>
         <h2>Ingredients</h2>
         <ul>
             <li>Bread</li>
