Add chicken.webp and edit chicken.html

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Orange Chicken</h1>
-        <img src="" alt="Orange Chicken">
+        <img src="images/chicken.webp" alt="Orange Chicken">
         <h2>What is orange chicken?</h2>
         <p>Orange chicken is a traditional chinese dish composed of chicken and orange sauce.</p>
         <h2>Ingredients</h2>
