--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/misto.html">Misto</a>
+    <ul>
+    <li><a href="recipes/chicken.html">Orange Chicken</a></li>
+    <li><a href="recipes/misto.html">Misto</a></li>
+    <li><a href="recipes/pao.html">Pão de Queijo</a></li>
+</ul>
 </body>
 </html>
