--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="images/pooh.gif" alt="Winnie the Pooh gif">
     <ul>
     <li><a href="recipes/chicken.html">Orange Chicken</a></li>
     <li><a href="recipes/misto.html">Misto</a></li>
