--- a/recipes/misto.html
+++ b/recipes/misto.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Misto</h1>
-        <img src="images/misto.jpg" alt="Misto">
+        <img src="../images/misto.jpg" alt="Misto">
         <h2>What is a misto?</h2>
         <p>A misto is a Brazilian cheese and turkey sandwich.</p>
         <h2>Ingredients</h2>
