--- a/recipes/pao.html
+++ b/recipes/pao.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Pão de Queijo</h1>
-        <img src="images/pao.webp" alt="Pão de Queijo">
+        <img src="../images/pao.webp" alt="Pão de Queijo">
         <h2>What is pão de queijo?</h2>
         <p>Pão de queijo is a cheese bread snack from Minas Gerais, Brazil.</p>
         <h2>Ingredients</h2>
