Add return links

--- a/recipes/misto.html
+++ b/recipes/misto.html
@@ -23,5 +23,6 @@
             <li>Place turkey in bread</li>
             <li>Heat up</li>
         </ol>
+        <a href="../index.html">Return to homepage</a>
     </body>
 </html>
