--- a/recipes/pao.html
+++ b/recipes/pao.html
@@ -31,5 +31,6 @@
             <li>Drop dough by 1/4 cup-size balls onto an ungreased baking sheet.</li>
             <li>Bake in the preheated oven until the tops are lightly browned, 15 to 20 minutes.</li>
         </ol>
+        <a href="../index.html">Return to homepage</a>
     </body>
 </html>
