--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -50,5 +50,6 @@
             <li>Mix together cornstarch and water until completely smooth. Stir into the boiling sauce. 
                 Reduce heat to medium-low, add the chicken, and simmer, stirring occasionally, until cooked through, about 5 minutes.</li>
         </ol>
+        <a href="../index.html">Return to homepage</a>
     </body>
 </html>
