--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Recipes</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="images/pooh.gif" alt="Winnie the Pooh gif">
+    <h1>Recipes</h1>
     <ul>
     <li><a href="recipes/chicken.html">Orange Chicken</a></li>
-    <li><a href="recipes/misto.html">Misto</a></li>
     <li><a href="recipes/pao.html">Pão de Queijo</a></li>
+    <li><a href="recipes/misto.html">Misto</a></li>
 </ul>
+ <img src="images/pooh.gif" alt="Winnie the Pooh gif">
 </body>
 </html>
