--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Orange Chicken Recipe</title>
+        <link rel="stylesheet" href="../styles/recipes.css"
     </head>
 
     <body>
         <h1>Orange Chicken</h1>
-        <img src="../images/chicken.webp" alt="Orange Chicken">
         <h2>What is orange chicken?</h2>
+        <img src="../images/chicken.webp" alt="Orange Chicken">
         <p>Orange chicken is a traditional chinese dish composed of chicken and orange sauce.</p>
         <h2>Ingredients</h2>
         <h3>Sauce</h3>
