--- a/recipes/misto.html
+++ b/recipes/misto.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Misto Recipe</title>
+        <link rel="stylesheet" href="../styles/recipes.css">
     </head>
 
     <body>
         <h1>Misto</h1>
-        <img src="../images/misto.jpg" alt="Misto">
         <h2>What is a misto?</h2>
+        <img src="../images/misto.jpg" alt="Misto">
         <p>A misto is a Brazilian cheese and turkey sandwich.</p>
         <h2>Ingredients</h2>
         <ul>
