--- a/recipes/pao.html
+++ b/recipes/pao.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Pão de Queijo Recipe</title>
+        <link rel="stylesheet" href="../styles/recipes.css"
     </head>
 
     <body>
         <h1>Pão de Queijo</h1>
-        <img src="../images/pao.webp" alt="Pão de Queijo">
         <h2>What is pão de queijo?</h2>
+        <img src="../images/pao.webp" alt="Pão de Queijo">
         <p>Pão de queijo is a cheese bread snack from Minas Gerais, Brazil.</p>
         <h2>Ingredients</h2>
         <ul>
